Thomas/WAO/18. Kubernetes Basics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app-pod   # Pods to target
  ports:
    - protocol: TCP
      port: 80      # Port on the service
      targetPort: 80   # Port on the Pods
  type: ClusterIP    # Type of the service (default)
